--- a/lesson-10/css/style.css
+++ b/lesson-10/css/style.css
@@ -1,5 +1,5 @@
 body {
-	min-height: 100vh;
+	height: 200vh;
 	padding-top: 100px;
 }
 .header {
@@ -9,11 +9,16 @@ body {
 	z-index: 1;
 	width: 100%;
 	height: 100px;
-	background-color: #68340f;
-	opacity: 0.8;
+	background-color: #aea;
+	opacity: 0.9;
 }
 .main {
-	background-color: #F2EFE4;
+	min-height: 100%;
+	background-image: url("../img/bg.png");
+	background-repeat: no-repeat;
+	background-position: center 100px;
+	background-attachment: fixed;
+	background-size: auto calc(100% - 100px);
 }
 .block {
 	position: absolute;
@@ -23,7 +28,7 @@ body {
 	z-index: 0;
 	width: 400px;
 	height: 400px;
-	padding: 15px 20px 10px 20px;
+	padding: 15px 20px 10px;
 	background-color: #BD3632;
 	text-overflow: ellipsis;
 	
@@ -34,4 +39,7 @@ body {
 }
 .main__text {
 	text-align: justify;
+}
+.block__caption {
+	color: #fff;
 }
