--- a/lesson-11/css/style.css
+++ b/lesson-11/css/style.css
@@ -11,7 +11,7 @@
 	border-radius: 1px;
 
 	color: #706b73;
-	font-family: "Open Sans";
+	font-family: "Open Sans", sans-serif;
 	font-size: 37px;
 	font-weight: 600;
 	text-align: center;
