--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -51,7 +51,7 @@ textarea:focus {
   background-size: cover;
 }
 .header__top {
-  margin-top: 7%;
+  margin-top: 5%;
 }
 /* HEADER-LOGO */
 .header__top_logo {
@@ -183,6 +183,9 @@ textarea:focus {
   height: 55px;
   display: block;
   margin: -30px auto 30px;
+  -webkit-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
+  -moz-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
+  box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
