replace FEATURES WORKS css transition upper

--- a/lesson-14/css/style.less
+++ b/lesson-14/css/style.less
@@ -235,7 +235,7 @@
 			font-size: 50px;
 			color: @white;
 		}
-/* FEATURES WORKS ============================ */
+/* FEATURED WORKS ============================ */
 	.works {
 		background-color: @bgc-works;
 		padding-bottom: 10%;
@@ -250,14 +250,14 @@
 		img {
 			// position: absolute;
 			margin: 0 auto;
+			-webkit-transition: all 0.5s;
+			-o-transition: all 0.5s;
+			transition: all 0.5s;
 		}
 		&:hover img {
 			-ms-transform:scale(1.2);
 			-webkit-transform:scale(1.2);
 			transform:scale(1.2);
-			-webkit-transition: all 0.5s;
-			-o-transition: all 0.5s;
-			transition: all 0.5s;
 		}
 	}
 	.signature__wrap {
@@ -267,12 +267,12 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
+		-webkit-transition: all 0.5s;
+		-o-transition: all 0.5s;
+		transition: all 0.5s;
 		background-color: rgba(0,0,0,.7);
 		&:hover {
 			opacity: 1;
-			-webkit-transition: all 0.5s;
-			-o-transition: all 0.5s;
-			transition: all 0.5s;
 
 		}
 	}
