--- a/lesson-14/css/style.css
+++ b/lesson-14/css/style.css
@@ -238,7 +238,7 @@ textarea:focus {
   font-size: 50px;
   color: #ffffff;
 }
-/* FEATURES WORKS ============================ */
+/* FEATURED WORKS ============================ */
 .works {
   background-color: #f5f5f5;
   padding-bottom: 10%;
@@ -253,14 +253,14 @@ textarea:focus {
 }
 .works__box img {
   margin: 0 auto;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .works__box:hover img {
   -ms-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
 }
 .signature__wrap {
   opacity: 0;
@@ -269,13 +269,13 @@ textarea:focus {
   top: 0;
   width: 100%;
   height: 100%;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
   background-color: rgba(0, 0, 0, 0.7);
 }
 .signature__wrap:hover {
   opacity: 1;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
 }
 .works__signature {
   position: absolute;
