--- a/lesson-15/css/style.css
+++ b/lesson-15/css/style.css
@@ -308,13 +308,20 @@ textarea:focus {
   padding: 0;
 }
 .serv__list_item {
+  display: block;
   width: 100px;
   height: 100px;
   margin: 10px 0;
   background-color: #fbfbfb;
 }
-.serv__text {
-  padding-left: 40px;
+.serv__list_item.active {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
+  -moz-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
+  box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
+}
+.serv__list_item.active a {
+  cursor: default;
 }
 .serv__text h4 {
   font-size: 30px;
@@ -336,32 +343,6 @@ textarea:focus {
   -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
   -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
-}
-/* change bootsrap styles for TABS */
-.nav-tabs > li > a:hover {
-  background-color: #fbfbfb;
-}
-.nav-tabs > li.active > a {
-  -webkit-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
-  box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
-}
-/* cancel bootstrap styles for TABS*/
-.nav-tabs {
-  border-bottom: none;
-}
-.nav-tabs > li > a {
-  margin-right: 0;
-  border-radius: 0;
-  border: none;
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:focus,
-.nav-tabs > li.active > a:hover {
-  border: none;
-}
-.nav > li > a {
-  padding: 0;
 }
 /* FAQ ======================================== */
 .faq {
