--- a/lesson-15/css/style.less
+++ b/lesson-15/css/style.less
@@ -304,16 +304,22 @@
 	.serv__list_group {
 		list-style: none;
 		padding: 0;
-		// padding-left: 0;
 	}
 	.serv__list_item {
+		display: block;
 		width: 100px;
 		height: 100px;
 		margin: 10px 0;
 		background-color: @bgc-item;
+		&.active {
+			background-color: #fff;
+			.box-shadow(0px, 0px, 36px, 0px, rgba(20, 20, 21, 0.2));
+			a {
+				cursor: default;
+			}
+		}
 	}
 	.serv__text {
-		padding-left: 40px;
 		h4 {
 			font-size: 30px;
 		}
@@ -334,28 +340,6 @@
 			.box-shadow(0px, 11px, 20px, 0px, rgba(20, 20, 21, 0.07));
 		}
 	}
-	/* change bootsrap styles for TABS */
-		.nav-tabs>li>a:hover {
-			background-color: @bgc-item;
-		}	
-		.nav-tabs>li.active>a {
-			.box-shadow(0px, 0px, 36px, 0px, rgba(20, 20, 21, 0.2));
-		}
-	/* cancel bootstrap styles for TABS*/
-		.nav-tabs {
-			border-bottom: none;
-			&>li>a {
-				margin-right: 0;
-				border-radius: 0;
-				border: none;
-			}
-		}
-		.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
-			border: none;
-		}
-		.nav>li>a {
-			padding: 0;
-		}
 /* FAQ ======================================== */
 	.faq {
 		background-color: @bgc-header;
