--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -336,16 +336,44 @@ textarea:focus {
   margin: 15px 0;
   background-color: #fc7253;
 }
-.serv__text button {
+.serv__text_button {
   width: 240px;
   height: 55px;
+  display: block;
   margin-top: 20px;
-  background-color: #ffffff;
-  border: 1px solid #ededed;
-  border-radius: 30px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
   -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
   -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
+  text-align: center;
+  background-color: #ffffff;
+  color: #6d6d6d;
+  line-height: 55px;
+  vertical-align: middle;
+}
+.serv__text_button:hover,
+.serv__text_button:focus {
+  text-decoration: none;
+  color: #6d6d6d;
+}
+.serv__text_button span {
+  display: inline-block;
+  width: 16px;
+  height: 1px;
+  margin-right: 18px;
+  vertical-align: middle;
+  background-color: #6d6d6d;
+}
+.serv__text_button span::before {
+  display: block;
+  margin-left: 7px;
+  margin-top: -8px;
+  content: '';
+  width: 1px;
+  height: 16px;
+  background-color: #6d6d6d;
 }
 /* FAQ ======================================== */
 .faq {
@@ -420,6 +448,7 @@ textarea:focus {
   -moz-box-shadow: 0px 3px 14px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 3px 14px 0px rgba(20, 20, 21, 0.2);
   cursor: pointer;
+  z-index: 1;
 }
 .slider-arrow-prev {
   left: 0;
@@ -429,7 +458,6 @@ textarea:focus {
   -o-transform: translate(-25%, -50%);
   transform: translate(-25%, -50%);
   padding: 15px 19px 15px 17px;
-  z-index: 999;
 }
 .slider-arrow-next {
   right: 0;
@@ -439,7 +467,6 @@ textarea:focus {
   -o-transform: translate(25%, -50%);
   transform: translate(25%, -50%);
   padding: 15px 17px 15px 19px;
-  z-index: 999;
 }
 .slider-arrow:hover {
   background-color: #fc7253;
