--- a/lesson-16/css/style.less
+++ b/lesson-16/css/style.less
@@ -231,7 +231,6 @@
 					background-color: @c-grey;
 				}
 			}
-
 		}
 	}
 	/* PROCESS-ICON */
@@ -332,14 +331,39 @@
 			margin: 15px 0;
 			background-color: @c-orange;
 		}
-		button {
+		&_button {
 			width: 240px;
 			height: 55px;
+			display: block;
 			margin-top: 20px;
-			background-color: @white;
-			border: 1px solid lighten(@c-grey, 50%);
-			border-radius: 30px;
+			.border-radius(50px);
 			.box-shadow(0px, 11px, 20px, 0px, rgba(20, 20, 21, 0.07));
+			text-align: center;
+			background-color: @white;
+			color: @c-grey;
+			line-height: 55px;
+			vertical-align: middle;
+			&:hover, &:focus {
+				text-decoration: none;
+				color: @c-grey;
+			}
+			span {
+				display: inline-block;
+				width: 16px;
+				height: 1px;
+				margin-right: 18px;
+				vertical-align: middle;
+				background-color: @c-grey;
+				&::before {
+					display: block;
+			    margin-left: 7px;
+			    margin-top: -8px;
+			    content: '';
+			    width: 1px;
+			    height: 16px;
+					background-color: @c-grey;
+				}
+			}
 		}
 	}
 /* FAQ ======================================== */
@@ -412,6 +436,7 @@
 		background-color: @white;
 		.box-shadow(0px, 3px, 14px, 0px, rgba(20, 20, 21, 0.2));
 		cursor: pointer;
+		z-index: 1;
 		&-prev {
 			left: 0;
 			top: 50%;
@@ -420,7 +445,6 @@
 			-o-transform: translate(-25%, -50%);
 			transform: translate(-25%, -50%);
 			padding: 15px 19px 15px 17px;
-			z-index: 999;
 		}
 		&-next {
 			right: 0;
@@ -430,7 +454,6 @@
 			-o-transform: translate(25%, -50%);
 			transform: translate(25%, -50%);
 			padding: 15px 17px 15px 19px;
-			z-index: 999;
 		}
 		&:hover {
 			background-color: @c-orange;
