--- a/lesson-23/css/style.css
+++ b/lesson-23/css/style.css
@@ -70,8 +70,6 @@ textarea:focus {
   width: 150px;
   height: 55px;
   border: 4px solid #6d6d6d;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
   border-radius: 1px;
   font-size: 37px;
   font-family: "Open Sans", sans-serif;
@@ -89,8 +87,6 @@ textarea:focus {
   content: '';
   width: 34px;
   border: 2px solid #6d6d6d;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
   border-radius: 1px;
 }
 .header__top_menu_wrapper {
@@ -101,8 +97,6 @@ textarea:focus {
   width: 34px;
   margin: 4px 0;
   border: 2px solid #6d6d6d;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
   border-radius: 1px;
 }
 /* HEADER-FORM */
@@ -113,12 +107,8 @@ textarea:focus {
   margin-top: 55px;
   padding: 20px 40px;
   /* 1.7% 3.5% */
-  -webkit-box-shadow: 0px 0px 57px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 0px 57px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 0px 57px 0px rgba(20, 20, 21, 0.2);
   background-color: #fff;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
   text-align: center;
 }
@@ -144,21 +134,15 @@ textarea:focus {
   margin: 0 auto;
   margin-top: 15px;
   border: none;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
   border-radius: 50px;
   background-color: #fc7253;
   font-size: 16px;
   line-height: 25px;
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.1);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.1);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.1);
   vertical-align: middle;
   color: #fff;
 }
 .header__form button:active {
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
 }
 .header__form button span {
@@ -180,7 +164,6 @@ textarea:focus {
   min-height: 100%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 /* WORKING PROCESS ============================ */
@@ -191,7 +174,7 @@ textarea:focus {
   max-width: 340px;
   margin: 0 auto;
   padding: 45px 10% 65px;
-  color: #ffffff;
+  color: #ffffff
   /* PROCESS-BACKGROUND */
   /* PROCESS-TEXT */
   /* PROCESS-BUTTON */
@@ -211,12 +194,9 @@ textarea:focus {
 .process_box_lara i {
   -webkit-transform: rotate(-15deg);
   -ms-transform: rotate(-15deg);
-  -o-transform: rotate(-15deg);
   transform: rotate(-15deg);
 }
 .process_box:hover {
-  -webkit-box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.3);
-  -moz-box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.3);
   box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.3);
 }
 .process_box h4 {
@@ -232,15 +212,11 @@ textarea:focus {
   height: 55px;
   display: block;
   margin: -30px auto 30px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
   border-radius: 50px;
   background-color: #ffffff;
   line-height: 55px;
   vertical-align: middle;
   color: #6d6d6d;
-  -webkit-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
-  -moz-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
   box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
 }
 .process_box_button:hover,
@@ -249,8 +225,6 @@ textarea:focus {
   color: #6d6d6d;
 }
 .process_box_button:active {
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
 }
 .process_box_button span {
@@ -297,7 +271,6 @@ textarea:focus {
 .works__box img {
   margin: 0 auto;
   -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
   transition: all 0.5s;
 }
 .works__box:hover img {
@@ -313,13 +286,11 @@ textarea:focus {
   top: 0;
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
-  -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   width: 100%;
   max-width: 500px;
   height: 100%;
   -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
   transition: all 0.5s;
   background-color: rgba(0, 0, 0, 0.7);
 }
@@ -330,7 +301,9 @@ textarea:focus {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 .works__signature p {
   font-family: "Open Sans", sans-serif;
@@ -343,11 +316,7 @@ textarea:focus {
   width: 180px;
   height: 55px;
   border: none;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
   border-radius: 50px;
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   line-height: 55px;
   text-align: center;
@@ -356,8 +325,6 @@ textarea:focus {
   color: #ffffff;
 }
 .works__signature a:active {
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.35);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.35);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.35);
 }
 .works__signature a:hover,
@@ -387,8 +354,6 @@ textarea:focus {
 }
 .serv__list_item.active {
   background-color: #fff;
-  -webkit-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 0px 36px 0px rgba(20, 20, 21, 0.2);
 }
 .serv__list_item.active a {
@@ -412,11 +377,7 @@ textarea:focus {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 1px solid #ededed;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
   border-radius: 50px;
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   background-color: #ffffff;
   color: #6d6d6d;
@@ -425,8 +386,6 @@ textarea:focus {
 }
 .serv__text_button_before:active,
 .serv__text_button_after:active {
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
 }
 .serv__text_button_before:hover,
@@ -493,19 +452,14 @@ textarea:focus {
   height: 100px;
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
-  -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   border: 1px solid #d3d3d3;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
   border-radius: 50%;
 }
 .item__content {
   margin: 50px 25px;
   padding-top: 90px;
   border: 1px solid #d3d3d3;
-  -webkit-box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.2);
   text-align: center;
 }
@@ -528,14 +482,10 @@ textarea:focus {
 }
 .slider-arrow {
   position: absolute;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
   border-radius: 50%;
   font-size: 17px;
   color: #333333;
   background-color: #ffffff;
-  -webkit-box-shadow: 0px 3px 14px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 3px 14px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 3px 14px 0px rgba(20, 20, 21, 0.2);
   cursor: pointer;
   z-index: 1;
@@ -545,7 +495,6 @@ textarea:focus {
   top: 50%;
   -webkit-transform: translate(-25%, -50%);
   -ms-transform: translate(-25%, -50%);
-  -o-transform: translate(-25%, -50%);
   transform: translate(-25%, -50%);
   padding: 15px 19px 15px 17px;
 }
@@ -554,7 +503,6 @@ textarea:focus {
   top: 50%;
   -webkit-transform: translate(25%, -50%);
   -ms-transform: translate(25%, -50%);
-  -o-transform: translate(25%, -50%);
   transform: translate(25%, -50%);
   padding: 15px 17px 15px 19px;
 }
@@ -573,8 +521,6 @@ textarea:focus {
   width: 21px;
   height: 7px;
   color: transparent;
-  -webkit-border-radius: 20%;
-  -moz-border-radius: 20%;
   border-radius: 20%;
   background-color: #6d6d6d;
 }
@@ -594,18 +540,12 @@ textarea:focus {
   margin: 0 auto;
   margin-top: 45px;
   border: 1px solid #ededed;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
   border-radius: 50px;
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   background-color: #ffffff;
   color: #6d6d6d;
 }
 .footer__button:active {
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.2);
 }
 .footer__button:hover {
@@ -625,8 +565,6 @@ textarea:focus {
   height: 50px;
   margin-left: 15px;
   text-align: right;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
   border-radius: 50%;
   font-size: 21px;
   line-height: 50px;
@@ -654,11 +592,7 @@ textarea:focus {
   top: 30px;
   z-index: 1;
   background-color: #fff;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
-  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
-  -moz-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
   box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.15);
 }
 .mw__menu_list {
@@ -668,8 +602,6 @@ textarea:focus {
 }
 .mw__menu_item {
   border: 1px solid #e0e0e0;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 2px;
   margin: 1px;
   padding: 10px;
@@ -677,7 +609,6 @@ textarea:focus {
   font-weight: 600;
   text-align: center;
   -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
   transition: all 0.3s;
 }
 .mw__menu_item:hover {
@@ -710,10 +641,7 @@ textarea:focus {
   height: 300px;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  -webkit-box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.4);
-  -moz-box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.4);
   box-shadow: 0px 0px 27px 0px rgba(20, 20, 21, 0.4);
   background-color: #ffffff;
 }
@@ -759,7 +687,6 @@ svg {
   width: 100%;
   visibility: hidden;
   -webkit-transition: visibility 0s 0.6s;
-  -moz-transition: visibility 0s 0.6s;
   transition: visibility 0s 0.6s;
 }
 .cd-modal svg {
@@ -786,21 +713,16 @@ svg {
   white-space: nowrap;
   /* Force hardware acceleration*/
   -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
   -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
   transform: translateZ(0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   visibility: hidden;
   opacity: 0;
   -webkit-transform: scale(0);
-  -moz-transform: scale(0);
   -ms-transform: scale(0);
-  -o-transform: scale(0);
   transform: scale(0);
   -webkit-transition: -webkit-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
   transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
 }
 .no-touch .cd-modal .modal-close:hover {
@@ -809,19 +731,15 @@ svg {
 .cd-modal.modal-is-visible {
   visibility: visible;
   -webkit-transition: visibility 0s 0s;
-  -moz-transition: visibility 0s 0s;
   transition: visibility 0s 0s;
 }
 .cd-modal.modal-is-visible .modal-close {
   visibility: visible;
   opacity: 1;
   -webkit-transition: -webkit-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
   transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
   -webkit-transform: scale(1);
-  -moz-transform: scale(1);
   -ms-transform: scale(1);
-  -o-transform: scale(1);
   transform: scale(1);
 }
 .cd-modal-content {
@@ -831,12 +749,9 @@ svg {
   padding: 3em 5% 4em;
   opacity: 0;
   -webkit-transform: translateY(50px);
-  -moz-transform: translateY(50px);
   -ms-transform: translateY(50px);
-  -o-transform: translateY(50px);
   transform: translateY(50px);
   -webkit-transition: opacity 0.3s 0s, -webkit-transform 0.3s 0s;
-  -moz-transition: opacity 0.3s 0s, -moz-transform 0.3s 0s;
   transition: opacity 0.3s 0s, transform 0.3s 0s;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -850,13 +765,10 @@ svg {
 .modal-is-visible .cd-modal-content {
   opacity: 1;
   -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
   transform: translateY(0);
   -webkit-overflow-scrolling: touch;
   -webkit-transition: opacity 0.3s 0.3s, -webkit-transform 0.3s 0.3s;
-  -moz-transition: opacity 0.3s 0.3s, -moz-transform 0.3s 0.3s;
   transition: opacity 0.3s 0.3s, transform 0.3s 0.3s;
 }
 @media only screen and (min-width: 768px) {
@@ -881,14 +793,12 @@ svg {
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity 0.3s 0.3s, visibility 0s 0.6s;
-  -moz-transition: opacity 0.3s 0.3s, visibility 0s 0.6s;
   transition: opacity 0.3s 0.3s, visibility 0s 0.6s;
 }
 .cd-cover-layer.modal-is-visible {
   opacity: 1;
   visibility: visible;
   -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
-  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
   transition: opacity 0.3s 0s, visibility 0s 0s;
 }
 /* MEDIA QUERRY =============================== */
