change maps section background

--- a/lesson-26/css/style.css
+++ b/lesson-26/css/style.css
@@ -645,6 +645,9 @@ textarea:focus {
   color: #6d6d6d;
 }
 /* MAPS ======================================= */
+.maps {
+  background-color: #f5f5f5;
+}
 .maps__yandex,
 .maps__google {
   margin-bottom: 20px;
