--- a/lesson-26/css/style.less
+++ b/lesson-26/css/style.less
@@ -609,6 +609,9 @@
 		color: @c-grey;
 	}
 /* MAPS ======================================= */
+	.maps {
+		background-color: @bgc-header;
+	}
 	.maps__yandex,
 	.maps__google {
 		margin-bottom: 20px;
