--- a/lesson-29/css/style.css
+++ b/lesson-29/css/style.css
@@ -57,10 +57,6 @@ textarea:focus {
 .header {
   position: relative;
   min-height: 100vh;
-  background-color: #f5f5f5;
-  background-image: url("../img/header/header_bg.jpg");
-  background-position: center center;
-  background-size: cover;
 }
 .header__top {
   margin-top: 4%;
@@ -173,6 +169,8 @@ textarea:focus {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background: #aaaaee url(../video-bg/background.jpg) 0 0 no-repeat;
+  background-size: cover;
 }
 .video-bg > video {
   position: absolute;
