--- a/lesson-29/css/style.less
+++ b/lesson-29/css/style.less
@@ -82,10 +82,10 @@
 		.header {
 			position: relative;
 			min-height: 100vh;
-			background-color: @bgc-header;
-			background-image: url("../img/header/header_bg.jpg");
-			background-position: center center;
-			background-size: cover;
+			// background-color: @bgc-header;
+			// background-image: url("../img/header/header_bg.jpg");
+			// background-position: center center;
+			// background-size: cover;
 		}
 		.header__top {
 			margin-top: 4%;
@@ -180,6 +180,8 @@
 	    width: 100%;
 	    height: 100%;
 	    overflow: hidden;
+	    background: #aae url(../video-bg/background.jpg) 0 0 no-repeat;
+	    background-size: cover;
 		}
 		.video-bg > video {
 	    position: absolute;
